# ChatBI_20260510

./: .env.example  .gitignore
.claude/: settings.local.json
Cot_research/: CoT决策流程图解.md  CoT核心概念速查卡.md  CoT自主决策机制研究报告.md  Dify与LangGraph实现对比.md
DIFY/: DIFY_知识库_API集成文档.md  dify_kb_tester.py  国际ChatBI-智能问答V3.0-echart.yml  国际ChatBI-深度思考V3.0.yml
Langraph/: ChatBI_开发Spec_上.md  ChatBI_开发Spec_下.md  流程图设计_优化版.html  流程图设计_优化版.md
client/: index.html  package-lock.json  package.json
client/src/: main.jsx  styles.css
client/src/services/: api.js
docs/: 2026-05-20_ChatBI后续开发计划.md  ChatBI_PRD_草案.md  implementation_plan.md  user_requirements_research.md  walkthrough.md  右侧数据可视化讨论.md
history/: 2026-05-20_chatbi_hotfixes_and_stage2_prep.md  2026-05-20_chatbi_interactive_parity_v3_history.md  2026-05-20_chatbi_react_mock_handoff.md  2026-05-21_drawer_layout_bugfix.md  2026-05-25_dify_retrieve_boundary.md  codex_后续工作_20260521.md  update_history_v2.md
my-mcp-tool/mcp-server-dify/: CLAUDE.md  README.md  pyproject.toml
my-mcp-tool/mcp-server-dify/src/mcp_server_dify/: server.py
my-mcp-tool/search-tavily/: Dockerfile  requirements.txt  server.py
server/: README.md  requirements.txt
server/app/: __init__.py  config_loader.py  dify.py  llm.py  main.py  query_service.py  settings.py  sql_guard.py  storage.py
server/app/api/: routes.py
server/app/mock/: catalog.py  engine.py
server/config/: data_assets.json
server/tests/: test_llm.py  test_sql_generation.py
前端原型/: index.html  index_robot_only.html  index_v2.html  index_v2_fixed.html  index_v3_dynamic.html
(+1 files in other folders)
