[project]
name = "mcp-server-dify"
version = "0.1.0"
description = "Official MCP server for Dify Knowledge Base"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "fastmcp>=2.14.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[project.authors]]
name = "User"
email = "user@example.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-dify = "mcp_server_dify:main"